# summary-service

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
migrations/: 001_initial.sql
scripts/: smoke_test.py
src/summary_service/: __init__.py  api.py  app.py  backup.py  cleanup.py  cli.py  llm.py  logging_config.py  metrics.py  models.py  repository.py  security.py  settings.py  worker.py
src/summary_service/migrations/: 001_initial.sql
tests/: test_api.py  test_backup.py  test_cli.py  test_container.sh  test_integration.py  test_llm.py  test_operations.py  test_repository.py  test_security.py  test_settings.py  test_worker.py
