[project]
name = "summary-service"
version = "0.1.0"
description = "Asynchronous document summarization microservice"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.21,<1",
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "prometheus-client>=0.22,<1",
  "pydantic-ai-slim[openai]>=0.7,<2",
  "pydantic-settings>=2.10,<3",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
  "ruff>=0.12,<1",
]

[project.scripts]
summary-service = "summary_service.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/summary_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"src/summary_service/cli.py" = ["S104"]
"tests/**" = ["S105", "S108"]
